<resources>
    <string name="app_name">Lost &amp; Found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="api_key">AIzaSyDvJEfl2PjDSUXljYW5N_OQTufCIveaJA8</string>
    <string name="settings">Settings</string>

    <array name="categories">
        <item>Animals</item>
        <item>Documents</item>
        <item>Wallets</item>
        <item>Phones</item>
    </array>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="about">This is the first project by me that has been written in programming language Java. I\'m 17 year old teenager from 9th district who\'s always looking forward to be better and in general be the best version of my self. This is not the final version of application. It\'s going to be global using app with millions of pleased users. Thank you for the attention and your time given to this project.</string>
    <string name="about_us">About Us</string>
    <string name="lost">Lost</string>
    <string name="found"><![CDATA[& Found]]></string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="login_btn">Login</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="my_posts">My Posts</string>
    <string name="new_post">New Post</string>
    <string name="click_here_to_choose_image">Click here to choose image</string>
    <string name="item_name">Item name</string>
    <string name="write_description_of_your_item">Write description of your item</string>
    <string name="enter_tags_break_with_commas">Enter tags(break with commas)</string>
    <string name="set_item_s_location">Set Item\'s Location</string>
    <string name="location">Location</string>
    <string name="publish">Publish</string>
    <string name="post_page">Post Page</string>
    <string name="name">Name:</string>
    <string name="name_post">name</string>
    <string name="location_post">Location:</string>
    <string name="place_post">place</string>
    <string name="description_post">Description:</string>
    <string name="post_s_description">Post\'s Description</string>
    <string name="tags">Tags:</string>
    <string name="new_post_btn">New Post</string>
    <string name="lost_type">LOST</string>
    <string name="found_type">FOUND</string>
    <string name="profile">Profile</string>
    <string name="person_s_name">Person\'s Name</string>
    <string name="person_s_email">Person\'s Email</string>
    <string name="notifications">Notifications</string>
    <string name="us_about">About</string>
    <string name="phone">Phone</string>
    <string name="number">number</string>
    <string name="city">City</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email_register">Email</string>
    <string name="phone_register">Phone</string>
    <string name="password_register">Password</string>
    <string name="city_register">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_btn">Register</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="search">Search</string>
    <string name="there_are_no_such_posts">There are no such posts</string>
    <string name="please_choose_post_type_at_the_bottom_first">Please choose post type at the bottom first!</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="person_s_name_will_be_placed_here">Person\'s name will be placed here</string>
    <string name="person_s_email_will_be_placed_here">Person\'s email will be placed here</string>
    <string name="description">Description</string>


</resources>
