<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Login.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="@id/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="600dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintVertical_bias="0.218" />

            <EditText
                android:id="@+id/input_username_for_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/transparent_white_stroke_bg"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />


            <EditText
                android:id="@+id/input_email_for_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/transparent_white_stroke_bg"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email_register"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/input_phone_for_registration"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/input_phone_for_registration"
                app:layout_constraintTop_toBottomOf="@+id/input_phone_for_registration" />

            <EditText
                android:id="@+id/input_phone_for_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/transparent_white_stroke_bg"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/phone_register"
                android:inputType="phone"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/input_username_for_registration"
                app:layout_constraintStart_toStartOf="@+id/input_username_for_registration"
                app:layout_constraintTop_toBottomOf="@+id/input_username_for_registration" />

            <EditText
                android:id="@+id/input_password_for_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autofillHints="password"
                android:background="@drawable/transparent_white_stroke_bg"
                android:drawableStart="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password_register"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/input_city_for_registration"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/input_city_for_registration"
                app:layout_constraintTop_toBottomOf="@+id/input_city_for_registration" />

            <EditText
                android:id="@+id/input_city_for_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/transparent_white_stroke_bg"
                android:drawableStart="@drawable/ic_city"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/city_register"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/input_email_for_registration"
                app:layout_constraintStart_toStartOf="@+id/input_email_for_registration"
                app:layout_constraintTop_toBottomOf="@+id/input_email_for_registration" />

            <EditText
                android:id="@+id/input_confirm_password_for_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autofillHints="password"
                android:background="@drawable/transparent_white_stroke_bg"
                android:drawableStart="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/input_password_for_registration"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/input_password_for_registration"
                app:layout_constraintTop_toBottomOf="@+id/input_password_for_registration" />


            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:background="@drawable/btn_bg"
                android:text="@string/register_btn"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/input_confirm_password_for_registration"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/input_confirm_password_for_registration"
                app:layout_constraintTop_toBottomOf="@+id/input_confirm_password_for_registration" />

            <TextView
                android:id="@+id/already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:shadowColor="@color/white"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/btn_register"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="@+id/btn_register"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>